--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     ],
     "require": {
         "twig/twig": "^3.7",
-        "coffeecode/router": "^2.0"
+        "coffeecode/router": "^2.0",
+        "phpoffice/phpspreadsheet": "^1.29"
     }
 }
